# backend/handler/reudbook/add.go
@@ -1,0 +1,10 @@
+package reudbook
+
+import (
+	"backend/gen/restapi/operations/bookshelf"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+func AddReudBook(params bookshelf.AddReudBookParams) middleware.Responder {
+	return middleware.NotImplemented("operation bookshelf.AddReudBook has not yet been implemented")
+}
