# backend/handler/reudbook/delete.go
@@ -1,0 +1,10 @@
+package reudbook
+
+import (
+	"backend/gen/restapi/operations/bookshelf"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+func DeleteReudBook(params bookshelf.DeleteReudBookParams) middleware.Responder {
+	return middleware.NotImplemented("operation bookshelf.DeleteReudBook has not yet been implemented")
+}
